--- a/【阿里巴巴2020届秋招内推】供应链（盒马，猫超等）、地表最强敏捷团队、杭州-西溪.md
+++ b/【阿里巴巴2020届秋招内推】供应链（盒马，猫超等）、地表最强敏捷团队、杭州-西溪.md
@@ -11,7 +11,7 @@
 <a name="63ILc"></a>
 ## 招聘流程
 
-1. 发送简历预评估，到nan.zh@alibaba-inc.com；
+1. 发送简历预评估，到zf110663@alibaba-inc.com；
 1. 电话面试；
 1. 集团2020年招聘开启后，内推系统进入流程；
 1. 面试通过入职
@@ -22,40 +22,40 @@
 
 <a name="IEkAN"></a>
 ## **“为啥叫nubility而不是niubility？”**
-不要听团队解释“多分支原罪假说”，“团队自我进化表现”啪啦啪啦，都是扯淡，就是一开始某个人拼错了，然后将nubility用在团队单分支开发。到了后来就不想纠正了，因为这个单词犹如一张契约，不管怎么样的场景，一旦出现，团队必然使命必达！更夸张的是团队花了无数的时间和精力为了守护这个名字和荣耀，以及于成为团队文化，新来的同学也会继续守护。但是我还是觉得拼错这个单词的人不肯承认错误继续掩盖。<br />![](https://intranetproxy.alipay.com/skylark/lark/0/2019/jpeg/10286/1563949547609-a26c3d51-9f77-4d65-bf14-0f46751748cb.jpeg#align=left&display=inline&height=2248&originHeight=596&originWidth=720&size=0&status=done&width=2716)
+不要听团队解释“多分支原罪假说”，“团队自我进化表现”啪啦啪啦，都是扯淡，就是一开始某个人拼错了，然后将nubility用在团队单分支开发。到了后来就不想纠正了，因为这个单词犹如一张契约，不管怎么样的场景，一旦出现，团队必然使命必达！更夸张的是团队花了无数的时间和精力为了守护这个名字和荣耀，以及于成为团队文化，新来的同学也会继续守护。但是我还是觉得拼错这个单词的人不肯承认错误继续掩盖。<br />![](https://img.alicdn.com/tfs/TB1bLQKbF67gK0jSZPfXXahhFXa-720-596.jpg)
 <a name="Lq5W5"></a>
 ## 
 <a name="6nPTi"></a>
 ## **“如果疲惫的灵魂追不上狂奔的肉体时，就需要停下来做一下Retro。”**
-Retro，就是Retrospective Meeting，是团队最早的实践。每次召开Retro就像罗马街头的“市议会”一样，好的不好的事情吵得脸红脖子粗，无论站会时间还是代码风格，甚至脚臭都能吵起来，但奇怪的是每次以Action和吃着水果贼笑着结尾，可能大家已经领悟到_只有吃拯救世界_retro并非“监管团队”而是“相信团队”。也正是这些坚持了27个迭代的retro，团队在进化、在自我管理、尝试其他实践，最重要的是每个成员领悟到，人是最重要的，规则为人期望秩序而服务的。<br />![](https://intranetproxy.alipay.com/skylark/lark/0/2019/jpeg/10286/1563949547927-4643d528-0961-40bc-a258-d4a526dcbb42.jpeg#align=left&display=inline&height=864&originHeight=540&originWidth=720&size=0&status=done&width=1152)
+Retro，就是Retrospective Meeting，是团队最早的实践。每次召开Retro就像罗马街头的“市议会”一样，好的不好的事情吵得脸红脖子粗，无论站会时间还是代码风格，甚至脚臭都能吵起来，但奇怪的是每次以Action和吃着水果贼笑着结尾，可能大家已经领悟到_只有吃拯救世界_retro并非“监管团队”而是“相信团队”。也正是这些坚持了27个迭代的retro，团队在进化、在自我管理、尝试其他实践，最重要的是每个成员领悟到，人是最重要的，规则为人期望秩序而服务的。<br />![](https://img.alicdn.com/tfs/TB1NDUObQT2gK0jSZFkXXcIQFXa-720-540.jpg)
 <a name="T8QHE"></a>
 ## 
 <a name="0qQOC"></a>
 ## **“2块钱！！”**
-团队从成立到现在，风风雨雨什么事都变化过，就每天团队所有成员的CodeReview这个实践雷打不动，印象中只有工作日outing的一天，大家假装坐在一起CodeReview，只有完成这个仪式后才能感觉踏实许多，然后继续去浪了....就算日常某一天实在没有新代码可以看的话，也会翻出老的TODO来鞭尸。那2块钱是怎么回事？每天的CodeReview最激动的时刻就是有人发现代码的问题，或者代码风格和团队不一致，连一个换行也不会放过的，一旦发现大家会很激动嚷着“XX，2块钱，充公美国outing基金”，眼都红了感觉好像去美国outing就差这2块了。但“2块钱”这个仪式却守护着团队的条条底线，道道准则，一旦规则定好100%执行，否则这辈子都去不了美国outing了，这很重要。有时候发现一条有效的守护与执行策略比定制策略更有价值。<br />![](https://intranetproxy.alipay.com/skylark/lark/0/2019/jpeg/10286/1563949547831-994d6367-322a-47bc-a355-6da58daba81f.jpeg#align=left&display=inline&height=1536&originHeight=540&originWidth=720&size=0&status=done&width=2048)
+团队从成立到现在，风风雨雨什么事都变化过，就每天团队所有成员的CodeReview这个实践雷打不动，印象中只有工作日outing的一天，大家假装坐在一起CodeReview，只有完成这个仪式后才能感觉踏实许多，然后继续去浪了....就算日常某一天实在没有新代码可以看的话，也会翻出老的TODO来鞭尸。那2块钱是怎么回事？每天的CodeReview最激动的时刻就是有人发现代码的问题，或者代码风格和团队不一致，连一个换行也不会放过的，一旦发现大家会很激动嚷着“XX，2块钱，充公美国outing基金”，眼都红了感觉好像去美国outing就差这2块了。但“2块钱”这个仪式却守护着团队的条条底线，道道准则，一旦规则定好100%执行，否则这辈子都去不了美国outing了，这很重要。有时候发现一条有效的守护与执行策略比定制策略更有价值。<br />![](https://img.alicdn.com/tfs/TB1FRwMbLb2gK0jSZK9XXaEgFXa-720-540.jpg)
 <a name="e9aZz"></a>
 ## 
 <a name="KRTfF"></a>
 ## **“我不要和这个脚臭的人pair”**
-有一次团队有2位同学在pair（白天那种）一段业务代码，突然一位同学站了起来指着另外一位同学手当面feedback脚太臭已经传染到手了，去搞干净要不别写了。这种feedback已经是比较温柔的了，在360时，每个同学都会互相feedback好的和差的地方，那都是大场面，四眼相对脖筋都出来，我们都是在外面拿着灭火器候着，怕眼睛脖子着火。但团队每位成员都是认真准备，真实和客观的feedback，所以每次都是先硬后软，最后扶着墙哭着出来的，画面和谐而充满希望。这种feedback在团队无处不在，对人对事对代码，对每次迭代，这些都是推动自洽成长的原动力。<br />![](https://intranetproxy.alipay.com/skylark/lark/0/2019/jpeg/10286/1563949547108-e48c296d-c702-4f66-8f7c-42551ed24279.jpeg#align=left&display=inline&height=1501&originHeight=540&originWidth=720&size=0&status=done&width=2001)
+有一次团队有2位同学在pair（白天那种）一段业务代码，突然一位同学站了起来指着另外一位同学手当面feedback脚太臭已经传染到手了，去搞干净要不别写了。这种feedback已经是比较温柔的了，在360时，每个同学都会互相feedback好的和差的地方，那都是大场面，四眼相对脖筋都出来，我们都是在外面拿着灭火器候着，怕眼睛脖子着火。但团队每位成员都是认真准备，真实和客观的feedback，所以每次都是先硬后软，最后扶着墙哭着出来的，画面和谐而充满希望。这种feedback在团队无处不在，对人对事对代码，对每次迭代，这些都是推动自洽成长的原动力。<br />![](https://img.alicdn.com/tfs/TB1wEoLbUY1gK0jSZFMXXaWcVXa-720-540.jpg)
 <a name="F0ulj"></a>
 ## 
 <a name="MsVSq"></a>
 ## **“代码洁癖”**
-8月酷夏的一个晚上，OperationUnitClient#queryOperationUnitsByMerchant这个方法名要不要去掉query后面的operationUnits，要不要用重载替换掉byMerchant，已经讨论了半个小时了。这次讨论的结果将记录在nubility代码规范并且可以自定义规则署名，从一开始的方法名读起来的畅快感，到穷尽所有场景下是否试用，再到后面client的一致性，最后上升到易经最高层次的决策策略，掐指，都无法达成一致。最终还是通过retro投票将这条规范登记在案，一旦登记“2元规则”将自动生效。团队有很多诸如此的讨论，可读性换行，消除缩减，布块擦拭回车键， 甚至IDE的自动换行长度，这些都是团队代码的洁癖。这些洁癖让代码看起来整齐划一，富有可读性，充满灵魂，是程序员生命的延续体，可以有效的斩获迷妹。<br />![](https://intranetproxy.alipay.com/skylark/lark/0/2019/jpeg/10286/1563949547973-b1039259-025b-4ebf-8ddb-0040709c9344.jpeg#align=left&display=inline&height=1806&originHeight=563&originWidth=720&size=0&status=done&width=2309)
+8月酷夏的一个晚上，OperationUnitClient#queryOperationUnitsByMerchant这个方法名要不要去掉query后面的operationUnits，要不要用重载替换掉byMerchant，已经讨论了半个小时了。这次讨论的结果将记录在nubility代码规范并且可以自定义规则署名，从一开始的方法名读起来的畅快感，到穷尽所有场景下是否试用，再到后面client的一致性，最后上升到易经最高层次的决策策略，掐指，都无法达成一致。最终还是通过retro投票将这条规范登记在案，一旦登记“2元规则”将自动生效。团队有很多诸如此的讨论，可读性换行，消除缩减，布块擦拭回车键， 甚至IDE的自动换行长度，这些都是团队代码的洁癖。这些洁癖让代码看起来整齐划一，富有可读性，充满灵魂，是程序员生命的延续体，可以有效的斩获迷妹。<br />![](https://img.alicdn.com/tfs/TB1VooLbUY1gK0jSZFMXXaWcVXa-720-563.jpg)
 <a name="huGyY"></a>
 ## 
 <a name="Nhr0A"></a>
 ## “光明顶会议”
-“光明顶会议是我团在2017年10月27日在光明顶召开的第八迭代Retro会议，是在团队产品需求膨胀的背景下，解决尽早和快速交付而召开的。这次会议确定了团队全栈方向和团队整体交付产品节奏控制为基本路线，决定团队成员自行承担所有测试和前端工作，是我团风格转变的重要转折点。”----Retro-2017.10.27<br />团队就是经过这次会议后，努力的沉淀和在五道口分享实践。从此之后，在整个五道口的各个团队见到了越来越多的standup，robot答疑服务群，产品发布邮件等等实践，下图为会议图片纪要。<br />![](https://intranetproxy.alipay.com/skylark/lark/0/2019/jpeg/10286/1563949547420-6fe68cda-19e2-407b-b8d0-79a9ba185cca.jpeg#align=left&display=inline&height=1220&originHeight=740&originWidth=720&size=0&status=done&width=1187)
+“光明顶会议是我团在2017年10月27日在光明顶召开的第八迭代Retro会议，是在团队产品需求膨胀的背景下，解决尽早和快速交付而召开的。这次会议确定了团队全栈方向和团队整体交付产品节奏控制为基本路线，决定团队成员自行承担所有测试和前端工作，是我团风格转变的重要转折点。”----Retro-2017.10.27<br />团队就是经过这次会议后，努力的沉淀和在五道口分享实践。从此之后，在整个五道口的各个团队见到了越来越多的standup，robot答疑服务群，产品发布邮件等等实践，下图为会议图片纪要。<br />![](https://img.alicdn.com/tfs/TB1eFkObNv1gK0jSZFFXXb0sXXa-720-740.jpg)
 <a name="AFuWD"></a>
 ## 
 <a name="oL0Ph"></a>
 ## **“任何实践都不是一成不变的。”**
-团队早期的敏捷实践“StoryBoard”，是有一个物理墙的，每天站会围绕着这些墙上的故事卡进行，仪式感很强。但是有一个问题就是每当卡的进度更新后，还需要屁股离开座位去手动挪卡到正确的进度，还有每个迭代初要写卡，团队基本都是无法用笔写字晚期患者，所以这个问题在多次Retro被提及，取消物理墙会失去仪式感，对团队迭代节奏失去了直观感觉，保留则团队的这个实践会打折扣，团队否掉了全部选项，决定改进这个实践，通过Aone的需求管理某个样式来替代物理墙，至此以后大家非常满意，心情愉悦，身上的肥肉证明一切。<br />![](https://intranetproxy.alipay.com/skylark/lark/0/2019/jpeg/10286/1563949547493-a61d8c5c-6ab5-4fd0-ad17-bd9a8333ac4e.jpeg#align=left&display=inline&height=2538&originHeight=846&originWidth=720&size=0&status=done&width=2160)![](https://intranetproxy.alipay.com/skylark/lark/0/2019/jpeg/10286/1563949547468-6f804bdf-f15d-40d3-bcec-9112440d50ab.jpeg#align=left&display=inline&height=1417&originHeight=423&originWidth=720&size=0&status=done&width=2412)
+团队早期的敏捷实践“StoryBoard”，是有一个物理墙的，每天站会围绕着这些墙上的故事卡进行，仪式感很强。但是有一个问题就是每当卡的进度更新后，还需要屁股离开座位去手动挪卡到正确的进度，还有每个迭代初要写卡，团队基本都是无法用笔写字晚期患者，所以这个问题在多次Retro被提及，取消物理墙会失去仪式感，对团队迭代节奏失去了直观感觉，保留则团队的这个实践会打折扣，团队否掉了全部选项，决定改进这个实践，通过Aone的需求管理某个样式来替代物理墙，至此以后大家非常满意，心情愉悦，身上的肥肉证明一切。<br />![](https://img.alicdn.com/tfs/TB1weEPbHH1gK0jSZFwXXc7aXXa-720-846.jpg)![](https://img.alicdn.com/tfs/TB1Y.7MbUD1gK0jSZFGXXbd3FXa-720-423.jpg)
 <a name="YcaOK"></a>
 ## 
 <a name="OsJ8i"></a>
 ## “请你按下核弹发射按钮！”
-照片中的同是一位来自CMU的实习生，期待在实习期间可以感受工作的_疲惫_愉快与_搬砖的乐趣_成就。在他刚来的时候，我们就认真在想这段时间团队到底能给他带来什么，怎么写代码？怎么与小姐姐沟通？怎么安排时间？这些都是个人与生俱来的脑袋在环境中自我学习获得的，团队可以给他真正带来的是无以伦比的迭代交付体验，从评审需求到发布交付。在他实习结束的那天，他全程参与了我们的发布仪式，洗脚沐浴更衣，拜二爷，最后按下了发布按钮。希望他在现在还可以想起这些仪式感，知道未来每一次发布与交付都是在改变宇宙，工作塞满了激情。<br />![](https://intranetproxy.alipay.com/skylark/lark/0/2019/jpeg/10286/1563949547954-9d0429ee-dac7-4313-b58b-8a7bfaf10a80.jpeg#align=left&display=inline&height=750&originHeight=540&originWidth=720&size=0&status=done&width=1000)
+照片中的同是一位来自CMU的实习生，期待在实习期间可以感受工作的_疲惫_愉快与_搬砖的乐趣_成就。在他刚来的时候，我们就认真在想这段时间团队到底能给他带来什么，怎么写代码？怎么与小姐姐沟通？怎么安排时间？这些都是个人与生俱来的脑袋在环境中自我学习获得的，团队可以给他真正带来的是无以伦比的迭代交付体验，从评审需求到发布交付。在他实习结束的那天，他全程参与了我们的发布仪式，洗脚沐浴更衣，拜二爷，最后按下了发布按钮。希望他在现在还可以想起这些仪式感，知道未来每一次发布与交付都是在改变宇宙，工作塞满了激情。<br />![](https://img.alicdn.com/tfs/TB13U7MbUD1gK0jSZFGXXbd3FXa-720-540.jpg)
 
